<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#222"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/exo_prev"
            style="@style/ExoMediaButton.Previous"
            />
        <ImageButton
            android:id="@+id/exo_play"
            style="@style/ExoMediaButton.Play"
            />
        <ImageButton
            android:id="@+id/exo_pause"
            style="@style/ExoMediaButton.Pause"/>
        <ImageButton
            android:id="@+id/exo_next"
            style="@style/ExoMediaButton.Next"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView android:id="@id/exo_position"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#FFF"/>
        <SeekBar
            android:id="@+id/exo_progress"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:focusable="false"
            android:layout_height="wrap_content" />
        <TextView android:id="@id/exo_duration"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#FFF"/>
    </LinearLayout>
</LinearLayout>
