<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE"
    android:orientation="vertical">
    <!--<TextView-->
    <!--android:text="Ingredients"-->
    <!--android:textColor="#111"-->
    <!--android:textSize="15dp"-->
    <!--android:textAlignment="center"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->
    <!--<ListView-->
    <!--android:id="@+id/ingreds_list"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_weight=".5"-->
    <!--android:layout_height="0dp" />-->
    <TextView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Steps"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_list"
        android:name="com.example.mohamedabdelaziz.baking.stepsListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.example.mohamedabdelaziz.baking.stepsListActivity"
        tools:listitem="@layout/steps_list_content">


    </android.support.v7.widget.RecyclerView>
</LinearLayout>