...
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="48dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_B"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/prev_icon"
                android:backgroundTint="@color/colorAccent" />

            <Button
                android:id="@+id/next_B"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="100dp"
                android:background="@drawable/next_icon"
                android:backgroundTint="@color/colorAccent" />
        </LinearLayout>
...
