<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDD"
    tools:context="com.example.mohamedabdelaziz.baking.MainActivity">

    <GridView
        android:id="@+id/Recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="300dp"
        android:horizontalSpacing="0dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="16dp"></GridView>
</android.support.v4.widget.SwipeRefreshLayout>
